--- a/contact-us.html
+++ b/contact-us.html
@@ -67,7 +67,7 @@
             <div class="editor-content">
                 <a name="ywhz" class="anchor"></a>
                 <h4>业务合作</h4>
-                <!-- <div class="board">
+                <div class="board">
                     <ul>
                         <li>
                             <input type="text" placeholder="姓名">
@@ -91,11 +91,11 @@
                         </li>
                     </ul>
                     <button id="submit">确认提交</button>
-                </div> -->
-                <div class="success">
-                    <i></i>
-                    <p>提交成功，我们将于48小时内给您回复，请耐心等待</p>
                 </div>
+                <!-- <div class="success">
+                    <i></i>
+                    <p>提交成功<br>我们将于48小时内给您回复，请耐心等待</p>
+                </div> -->
             </div>
             <a name="khfw" class="anchor"></a>
             <div class="editor-content">
