--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@
                 <a name="gsjj" class="anchor"></a>
                 <div class="editor-content" name="gsjj">
                     <h4>公司简介</h4>
-                    <img align="right" src="./img/page/about/about-1.jpg" style="margin-left:50px">
-                    <p>优鸟科技旨在助力企业实现云上应用、数字化升级重组，并通过优鸟创孵、桦龙科技、塔莉亚品牌策划、黑狐数字传媒、智媒网络、大鼎科技、优鸟产业互联研究中心、优鸟商业卫星产业应用研究中心等赋能；从商业的顶层架构、新IT技术支撑，到策略、设计，再到落地执行，改变营销、销售和经营的方式, 为商家、品牌及其他实体企业提供一站式实体+商务电子化、云应用等解决方案和服务，让其可借助智能商业的力量，为企业打通上中下游链路，让企业通过产业互联化、数据智能化、网络协同化，构建全渠道体系，实现线上线下结合，提高各商事主体的运营效益，提升商家品牌价值。</p>
-                    
+                   
+                    <p class="left">优鸟科技旨在助力企业实现云上应用、数字化升级重组，并通过优鸟创孵、桦龙科技、塔莉亚品牌策划、黑狐数字传媒、智媒网络、大鼎科技、优鸟产业互联研究中心、优鸟商业卫星产业应用研究中心等赋能；从商业的顶层架构、新IT技术支撑，到策略、设计，再到落地执行，改变营销、销售和经营的方式, 为商家、品牌及其他实体企业提供一站式实体+商务电子化、云应用等解决方案和服务，让其可借助智能商业的力量，为企业打通上中下游链路，让企业通过产业互联化、数据智能化、网络协同化，构建全渠道体系，实现线上线下结合，提高各商事主体的运营效益，提升商家品牌价值。</p>
+                    <span class="right"><img src="./img/page/about/about-1.jpg" style="margin-left:50px"></span>
                 </div>
                 <a name="ynwh" class="anchor"></a>
                 <div class="editor-content" name="ynwh">
@@ -70,20 +70,21 @@
                 </div>
                 <div class="editor-content pt50">
                     <p>
-                        <span></span>企业使命</span>
-                        <span style="margin-left: 50px;">让你酒香不怕巷子深</span>
+                        <span>企业使命</span>
+                        <span>让你酒香不怕巷子深</span>
                     </p>
                     <p>
                         <span>企业愿景</span>
-                        <span style="margin-left: 50px;">融合协同新生态，树立标杆新品牌</span>
+                        <span>融合协同新生态，树立标杆新品牌</span>
                     </p>
                     <p>
                         <span>企业价值观</span>
-                        <span style="margin-left: 30px;">实事求是  协同  利他  分享  创新</span>
+                        <span>实事求是  协同  利他  分享  创新</span>
                     </p>
                 </div>
                 <div class="ad">
-                    <img src="./img/page/about/about-2.jpg" alt="">
+                    <img src="./img/page/about/about-2.jpg" alt="" class="pc">
+                    <img src="./img/page/about/about-2.jpg" alt="" class="wap">
                 </div>
             </div>
             <a name="gslc" class="anchor"></a>
@@ -159,7 +160,8 @@
             <a name="zzjg" class="anchor"></a>
             <div class="editor-content" name="zzjg">
                 <h4>组织架构</h4>
-                <img src="./img/page/about/about-3.jpg">
+                <img src="./img/page/about/about-3.jpg" class="pc">
+                <img src="./img/page/about/about-3-m.jpg" class="wap">
             </div>
             <a name="kcxfz" class="anchor"></a>
             <div class="editor-content" name="kcxfz">
