--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/screen.css">
-    
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]> 
+    <script src="js/ie8/html5shiv.min.js"></script>
+    <script src="js/ie8/respond.min.js"></script>
+    <![endif]--> 
     <title>优鸟</title>
 </head>
 <body>
