--- a/index.html
+++ b/index.html
@@ -70,9 +70,24 @@
         </div>
     </div>
     <ul class="index-link">
-        <li><a href=""><img src="./img/page/index/banner-1.jpg"></a></li>
-        <li><a href=""><img src="./img/page/index/banner-3.jpg"></a></li>
-        <li><a href=""><img src="./img/page/index/banner-2.jpg"></a></li>
+        <li>
+            <a href="">
+                <img src="./img/page/index/banner-1.jpg" class="pc">
+                <img src="./img/page/index/banner-1-m.jpg" class="wap">
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <img src="./img/page/index/banner-3.jpg" class="pc">
+                <img src="./img/page/index/banner-3-m.jpg" class="wap">
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <img src="./img/page/index/banner-2.jpg" class="pc">
+                <img src="./img/page/index/banner-2-m.jpg" class="wap">
+            </a>
+        </li>
     </ul>
     <div id="bottom">
         <div class="wrap">
