新增新闻列表页

--- a/news-category.html
+++ b/news-category.html
@@ -49,75 +49,100 @@
             <li><a href="#qygg">企业公告</a></li>
         </ul>
         <div class="content-right">
-            <div class="editor-content">
-                <a name="ynzx" class="anchor"></a>
-                <h4>优鸟资讯<a href="" class="more">更多 &gt;</a></h4>
-                <p class="new"><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功<em>2018/06/12</em></p>
-                <div class="new-box">
-                    <div class="img-wrap">
-                        <img src="./img/page/news/news-457x257.1.jpg">
-                        <img src="./img/page/news/news-457x257.2.jpg">
-                    </div>
-                    <p>2018年8月11日，优鸟“2018产业互联顶层战略私密会”于昆明世博花园酒店会议中心举行，来自全国各地的80多位核心实体企业家应邀参加。会议以“产业互联”为主题，旨在深化各方对实体经济未来趋势的理解，形成推进产业互联、建设智能商业的向心力。 </p>
-                    <a href="" class="more">查看详情 ></a>
-                </div>
+            <div class="toutiao">
+                <h1><a href="#">“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</a></h1>
+                <p>文章来源：原创<span>2016-12-19</span><span>优鸟创孵</span></p>
+                <dl class="clearfix">
+                    <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
+                    <dd>习近平表示，朝鲜民主主义人民共和国成立70年以来，朝鲜人民在社会主义革命和建设事业中取得了显著成就。近年来，委员长同志带领朝鲜党和人民，在经济社会发展等方面采取一系列积极举措并取得重要成果，朝鲜社会主义事业发展进入新的历史时期。我对此感到由衷高兴。<a href="#" class="detail">查看详情</a></dd>
+                </dl>
             </div>
-            <div class="editor-content">
-                <ul>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
-                    </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
-                    </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
-                    </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
-                    </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
-                    </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
-                    </li>
-                </ul>
-            </div>
-            <div class="editor-content">
-                <a name="hyxw" class="anchor"></a>
-                <h4>行业新闻<a href="" class="more">更多 &gt;</a></h4>
-                <ul>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
-                    </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
-                    </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="editor-content">
-                <a name="qygg" class="anchor"></a>
-                <h4>企业公告<a href="" class="more">更多 &gt;</a></h4>
-                <ul>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
-                    </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
-                    </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
-                    </li>
+            <ul class="news-list">
+                <li>
+                    <a href="">
+                        <dl class="clearfix">
+                            <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
+                            <dd>
+                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
+                                <p>
+                                    <span>文章来源：原创</span>
+                                    <span>2016-12-19</span>
+                                    <span>优鸟创孵</span>
+                                </p>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <dl class="clearfix">
+                            <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
+                            <dd>
+                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
+                                <p>
+                                    <span>文章来源：原创</span>
+                                    <span>2016-12-19</span>
+                                    <span>优鸟创孵</span>
+                                </p>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <dl class="clearfix">
+                            <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
+                            <dd>
+                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
+                                <p>
+                                    <span>文章来源：原创</span>
+                                    <span>2016-12-19</span>
+                                    <span>优鸟创孵</span>
+                                </p>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <dl class="clearfix">
+                            <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
+                            <dd>
+                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
+                                <p>
+                                    <span>文章来源：原创</span>
+                                    <span>2016-12-19</span>
+                                    <span>优鸟创孵</span>
+                                </p>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <dl class="clearfix">
+                            <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
+                            <dd>
+                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
+                                <p>
+                                    <span>文章来源：原创</span>
+                                    <span>2016-12-19</span>
+                                    <span>优鸟创孵</span>
+                                </p>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+            </ul>
+            <div class="pages" id="pages">
+                <ul class="pagination">
+                    <li><a href="#">«</a></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">»</a></li>
                 </ul>
             </div>
         </div>
