--- a/contact-us.html
+++ b/contact-us.html
@@ -74,7 +74,7 @@
                             <label for=""><i></i>姓名必填</label>
                         </li>
                         <li>
-                            <input type="text" placeholder="联系电话">
+                            <input type="number" placeholder="联系电话">
                             <label for=""><i></i>电话必填</label>
                         </li>
                         <li>
