--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 <img src="./img/page/index/wap/3.jpg" class="wap">
                 <img src="./img/page/index/pc/3.jpg" class="pc">
             </div>
+            <div class="swiper-slide">
+                <img src="./img/page/index/wap/3.jpg" class="wap">
+                <img src="./img/page/index/pc/3.jpg" class="pc">
+            </div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -115,7 +119,7 @@
                 <h4>关于我们</h4>
                 <ul>
                     <li>
-                        <a href="#"><i class="wx"><img src="./img/common/icon-wx.png"></i>微信</a>
+                        <a href="javascript:;"><i class="wx"><img src="./img/common/icon-wx.png"></i>微信</a>
                         <div class="erweima">
                             <h5>优鸟公众号<span></span></h5>
                             <p><img src="./img/common/code.png" /></p>
