--- a/news-category.html
+++ b/news-category.html
@@ -44,7 +44,7 @@
     </div>
     <div class="content">
         <ul class="nav">
-            <li><a href="#ynzx" class="active">优鸟资讯</a></li>
+            <li><a href="#ynzx" class="active">优鸟快讯</a></li>
             <li><a href="#hyxw">行业新闻</a></li>
             <li><a href="#qygg">企业公告</a></li>
         </ul>
