--- a/news.html
+++ b/news.html
@@ -44,14 +44,14 @@
     </div>
     <div class="content">
         <ul class="nav">
-            <li><a href="#ynzx" class="active">优鸟资讯</a></li>
+            <li><a href="#ynzx" class="active">优鸟快讯</a></li>
             <li><a href="#hyxw">行业新闻</a></li>
             <li><a href="#qygg">企业公告</a></li>
         </ul>
         <div class="content-right">
             <div class="editor-content">
                 <a name="ynzx" class="anchor"></a>
-                <h4>优鸟资讯<a href="" class="more">更多 &gt;</a></h4>
+                <h4>优鸟快讯<a href="" class="more">更多 &gt;</a></h4>
                 <p class="new"><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功<em>2018/06/12</em></p>
                 <div class="new-box">
                     <div class="img-wrap">
