--- a/news-detail.html
+++ b/news-detail.html
@@ -44,13 +44,13 @@
     </div>
     <div class="content">
         <ul class="nav">
-            <li><a href="#ynzx" class="active">优鸟资讯</a></li>
+            <li><a href="#ynzx" class="active">优鸟快讯</a></li>
             <li><a href="#hyxw">行业新闻</a></li>
             <li><a href="#qygg">企业公告</a></li>
         </ul>
         <div class="content-right">
             <div class="editor-content">
-                <h4>优鸟资讯 > 资讯详情</h4>
+                <h4>优鸟快讯 > 资讯详情</h4>
                 <p class="new"><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</p>
                 <div class="sourse">
                     <span>文章来源：原创 2016-12-12 优鸟 优鸟创孵</span>
