增加手机号码验证

--- a/business.html
+++ b/business.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <title>业务范畴</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -44,7 +46,7 @@
     </div>
     <div class="content">
         <ul class="nav">
-            <li ><a href="javascript:;" class="active">业务范畴</a></li>
+            <li><a href="javascript:;" class="active">业务范畴</a></li>
         </ul>
         <div class="content-right">
             <div class="editor-content">
@@ -54,15 +56,17 @@
                     <dl>
                         <dt><img src="./img/page/business/b1.jpg"></dt>
                         <dd>
-                            <p>优鸟创孵是一家集商业、技术、运营、工具流等为一体化的科技公司。致力于为中小企业、商户、品牌商提供一站式实体+商务电子化、云应用等解决方案和服务，助力品牌商家打通全球销售链条、完善销售渠道 、提升企业品牌价值。以商业模式为基础，可为客户提供完整的模式、企划、营销、数字化升级等全新思维的一体化解决方案与服务。</p>
+                            <p>优鸟创孵是一家集商业、技术、运营、工具流等为一体化的科技公司。致力于为中小企业、商户、品牌商提供一站式实体+商务电子化、云应用等解决方案和服务，助力品牌商家打通全球销售链条、完善销售渠道
+                                、提升企业品牌价值。以商业模式为基础，可为客户提供完整的模式、企划、营销、数字化升级等全新思维的一体化解决方案与服务。</p>
                             <h5>一站式实体+商务电子化、云应用等解决方案和服务</h5>
                         </dd>
-                        
+
                     </dl>
                     <dl>
                         <dt><img src="./img/page/business/b2.jpg"></dt>
                         <dd>
-                            <p>桦龙科技是一家集商业、技术、运营、工具流等为一体化的科技公司。致力于为中小企业、商户、品牌商提供数字化升级和产业孵化等综合服务，提供包括商业模式顶层设计、数据智能、网络协同等技术服务支持，助力品牌商家打通生产、流通和零售的全产业链条 ，通过品牌、设计、技术、网络、云应用服务等多维赋能体系，深度孵化智能产业。</p>
+                            <p>桦龙科技是一家集商业、技术、运营、工具流等为一体化的科技公司。致力于为中小企业、商户、品牌商提供数字化升级和产业孵化等综合服务，提供包括商业模式顶层设计、数据智能、网络协同等技术服务支持，助力品牌商家打通生产、流通和零售的全产业链条
+                                ，通过品牌、设计、技术、网络、云应用服务等多维赋能体系，深度孵化智能产业。</p>
                             <h5>一站式智能产业互联品牌孵化、云应用等解决方案和服务</h5>
                         </dd>
                     </dl>
@@ -185,8 +189,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -220,7 +224,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -228,4 +232,5 @@
     <script src="js/language.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
