--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -12,12 +13,13 @@
     <link rel="stylesheet" href="css/screen.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]> 
+    <!--[if lt IE 9]>
     <script src="js/ie8/html5shiv.min.js"></script>
     <script src="js/ie8/respond.min.js"></script>
-    <![endif]--> 
+    <![endif]-->
     <title>优鸟</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -51,26 +53,26 @@
     </div>
     <div class="video">
         <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <img src="./img/page/index/wap/1.jpg" class="wap">
-                <img src="./img/page/index/pc/1.jpg" class="pc">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="./img/page/index/wap/1.jpg" class="wap">
+                    <img src="./img/page/index/pc/1.jpg" class="pc">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./img/page/index/wap/2.jpg" class="wap">
+                    <img src="./img/page/index/pc/2.jpg" class="pc">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./img/page/index/wap/3.jpg" class="wap">
+                    <img src="./img/page/index/pc/3.jpg" class="pc">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./img/page/index/wap/3.jpg" class="wap">
+                    <img src="./img/page/index/pc/3.jpg" class="pc">
+                </div>
             </div>
-            <div class="swiper-slide">
-                <img src="./img/page/index/wap/2.jpg" class="wap">
-                <img src="./img/page/index/pc/2.jpg" class="pc">
-            </div>
-            <div class="swiper-slide">
-                <img src="./img/page/index/wap/3.jpg" class="wap">
-                <img src="./img/page/index/pc/3.jpg" class="pc">
-            </div>
-            <div class="swiper-slide">
-                <img src="./img/page/index/wap/3.jpg" class="wap">
-                <img src="./img/page/index/pc/3.jpg" class="pc">
-            </div>
-        </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
+            <!-- Add Pagination -->
+            <div class="swiper-pagination"></div>
         </div>
     </div>
     <ul class="index-link">
@@ -132,8 +134,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -167,7 +169,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -176,4 +178,5 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
