--- a/uniao-store.html
+++ b/uniao-store.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <title>优鸟书院</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -93,13 +95,13 @@
             <div class="editor-content">
                 <div class="cps_content">
                     <h4>操盘手训练营</h4>
-                    <p>近年来，随着新一代信息技术的高速发展，人工智能、虚拟现实、区块链、大数据、云计算、物联网等前沿科技正在引发一场前所未有的变革与颠覆。<br/>
-                        数字定义世界、软件赋能生活，旧实体商业如何向新实体商业转型迈进？如何应用新IT、构建新生态、产生新动能？<br/>
-                        消费互联时代（2005-2015）已渐行渐远，产业互联时代（2015-2025）已经来临，一切都在重新定义。<br/>
-                        一、未来5年的趋势大探路（新实体的红利在哪儿？）;<br/>
-                        二、新IT时代：小白如何快速成为“零代码系统”开发者（从此告别过去成百上千万开发投入才拥有的能力）;<br/>
-                        三、新实体的核心资产是什么及如何构建？助推业绩倍增（深度解读落地方案）;<br/>
-                        四、如何打造本地化价值过千万的新商业体（深度开放解决方案）;<br/>
+                    <p>近年来，随着新一代信息技术的高速发展，人工智能、虚拟现实、区块链、大数据、云计算、物联网等前沿科技正在引发一场前所未有的变革与颠覆。<br />
+                        数字定义世界、软件赋能生活，旧实体商业如何向新实体商业转型迈进？如何应用新IT、构建新生态、产生新动能？<br />
+                        消费互联时代（2005-2015）已渐行渐远，产业互联时代（2015-2025）已经来临，一切都在重新定义。<br />
+                        一、未来5年的趋势大探路（新实体的红利在哪儿？）;<br />
+                        二、新IT时代：小白如何快速成为“零代码系统”开发者（从此告别过去成百上千万开发投入才拥有的能力）;<br />
+                        三、新实体的核心资产是什么及如何构建？助推业绩倍增（深度解读落地方案）;<br />
+                        四、如何打造本地化价值过千万的新商业体（深度开放解决方案）;<br />
                         五、新实体人才培养的摇篮（解决产业互联时代企业人力资源问题）。</p>
                 </div>
             </div>
@@ -144,8 +146,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -179,7 +181,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -187,4 +189,5 @@
     <script src="js/language.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
