--- a/contact-us.html
+++ b/contact-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <title>联系我们</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -74,7 +76,7 @@
                             <label for=""><i></i>姓名必填</label>
                         </li>
                         <li>
-                            <input type="number" placeholder="联系电话">
+                            <input type="text" placeholder="联系电话" id="phone">
                             <label for=""><i></i>电话必填</label>
                         </li>
                         <li>
@@ -145,8 +147,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -180,7 +182,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -188,4 +190,5 @@
     <script src="js/language.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
