--- a/news-category.html
+++ b/news-category.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <title>优鸟动态</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -54,7 +56,8 @@
                 <p>文章来源：原创<span>2016-12-19</span><span>优鸟创孵</span></p>
                 <dl class="clearfix">
                     <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
-                    <dd>习近平表示，朝鲜民主主义人民共和国成立70年以来，朝鲜人民在社会主义革命和建设事业中取得了显著成就。近年来，委员长同志带领朝鲜党和人民，在经济社会发展等方面采取一系列积极举措并取得重要成果，朝鲜社会主义事业发展进入新的历史时期。我对此感到由衷高兴。<a href="#" class="detail">查看详情</a></dd>
+                    <dd>习近平表示，朝鲜民主主义人民共和国成立70年以来，朝鲜人民在社会主义革命和建设事业中取得了显著成就。近年来，委员长同志带领朝鲜党和人民，在经济社会发展等方面采取一系列积极举措并取得重要成果，朝鲜社会主义事业发展进入新的历史时期。我对此感到由衷高兴。<a
+                            href="#" class="detail">查看详情</a></dd>
                 </dl>
             </div>
             <ul class="news-list">
@@ -186,8 +189,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -195,7 +198,8 @@
                 <p>10000@uniaip.com</p>
                 <h4>服务热线：</h4>
                 <p>0871-65886828</p>
-                <a href="javascript:window.open('http://b.qq.com/webc.htm?new=0&sid=21345555&o=aaa&q=7', '_blank', 'height=502, width=644,toolbar=no,scrollbars=no,menubar=no,status=no');"><img src="./img/common/qq.png"></a>
+                <a href="javascript:window.open('http://b.qq.com/webc.htm?new=0&sid=21345555&o=aaa&q=7', '_blank', 'height=502, width=644,toolbar=no,scrollbars=no,menubar=no,status=no');"><img
+                        src="./img/common/qq.png"></a>
             </div>
             <div class="logo">
                 <a href=""><img src="./img/logo/logo-blue.png"></a>
@@ -221,7 +225,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -229,4 +233,5 @@
     <script src="js/language.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
