--- a/news-detail.html
+++ b/news-detail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <title>优鸟动态</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -62,13 +64,18 @@
                     </ul>
                 </div>
                 <div class="news-content">
-                    <p>2018年8月11日，优鸟“2018产业互联顶层战略私密会”于昆明世博花园酒店会议中心举行，来自全国各地的80多位核心实体企业家应邀参加。会议以“产业互联”为主题，旨在深化各方对实体经济未来趋势的理解，形成推进产业互联、建设智能商业的向心力。 </p>
+                    <p>2018年8月11日，优鸟“2018产业互联顶层战略私密会”于昆明世博花园酒店会议中心举行，来自全国各地的80多位核心实体企业家应邀参加。会议以“产业互联”为主题，旨在深化各方对实体经济未来趋势的理解，形成推进产业互联、建设智能商业的向心力。
+                    </p>
                     <p><img src="./img/page/news/news-740x417.1.jpg" alt=""></p>
-                    <p>会上优鸟科技总裁郑总主持会议并发言，从消费者视角分享了自己的亲身经历，从中提炼出对于产品和服务的理解，结合实际生意场景向大家梳理生意的本质。与各位企业家增进互信、凝集共识，为加强多方沟通、建设更稳定、更开放的合作机制提供了重要的指导意见。郑总分享到：“思维需要升级，应从经营商品思维升级到经营用户思维。” </p>
+                    <p>会上优鸟科技总裁郑总主持会议并发言，从消费者视角分享了自己的亲身经历，从中提炼出对于产品和服务的理解，结合实际生意场景向大家梳理生意的本质。与各位企业家增进互信、凝集共识，为加强多方沟通、建设更稳定、更开放的合作机制提供了重要的指导意见。郑总分享到：“思维需要升级，应从经营商品思维升级到经营用户思维。”
+                    </p>
                     <p><img src="./img/page/news/news-740x417.2.jpg" alt=""></p>
-                    <p>优鸟科技企划部张总向各位与会嘉宾介绍了公司的产品矩阵，并着重介绍了优鸟科技智慧零售云系统如何轻松应对并解决实际生意场景中实体商企遇到的痛点难点，从技术应用层面为实体商企提供了切实有效的思路与解决方案。 </p>
-                    <p>优鸟科技董事长佘董发表演讲《“云”得未来》，分享了后工业时代的“破与立”，“财富源泉”和“财富创造”的方式将更多的体现在软价值上。佘董分享到：“软产业将成为这个世界上财富和产业的主体。”在谈到优鸟赋能体系时佘董表示：让不懂互联网的小商户快速上云，让他们跟上时代，与趋势并进，是优鸟赋能体系最大的价值所在。 </p>
-                    <p>会上佘董向大家分享了两个重磅消息：1、工业及信息化部关于印发《推动企业上云实施指南（2018-2020）》的通知；2、两部委关于印发《扩大和升级信息消费三年行动计划（2018-2020）》的通知。这两个重磅消息说明了优鸟产业互联的商业路径，不但符合市场趋势，更符合政策趋势。从工信部的实施计划升级为当下的实施指南，充分表明了国家大力推动实体中小型企业上云的决心。 </p>
+                    <p>优鸟科技企划部张总向各位与会嘉宾介绍了公司的产品矩阵，并着重介绍了优鸟科技智慧零售云系统如何轻松应对并解决实际生意场景中实体商企遇到的痛点难点，从技术应用层面为实体商企提供了切实有效的思路与解决方案。
+                    </p>
+                    <p>优鸟科技董事长佘董发表演讲《“云”得未来》，分享了后工业时代的“破与立”，“财富源泉”和“财富创造”的方式将更多的体现在软价值上。佘董分享到：“软产业将成为这个世界上财富和产业的主体。”在谈到优鸟赋能体系时佘董表示：让不懂互联网的小商户快速上云，让他们跟上时代，与趋势并进，是优鸟赋能体系最大的价值所在。
+                    </p>
+                    <p>会上佘董向大家分享了两个重磅消息：1、工业及信息化部关于印发《推动企业上云实施指南（2018-2020）》的通知；2、两部委关于印发《扩大和升级信息消费三年行动计划（2018-2020）》的通知。这两个重磅消息说明了优鸟产业互联的商业路径，不但符合市场趋势，更符合政策趋势。从工信部的实施计划升级为当下的实施指南，充分表明了国家大力推动实体中小型企业上云的决心。
+                    </p>
                 </div>
             </div>
         </div>
@@ -112,8 +119,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -147,7 +154,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -155,4 +162,5 @@
     <script src="js/language.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
