--- a/news.html
+++ b/news.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <title>优鸟动态</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -58,7 +60,8 @@
                         <img src="./img/page/news/news-457x257.1.jpg">
                         <img src="./img/page/news/news-457x257.2.jpg">
                     </div>
-                    <p>2018年8月11日，优鸟“2018产业互联顶层战略私密会”于昆明世博花园酒店会议中心举行，来自全国各地的80多位核心实体企业家应邀参加。会议以“产业互联”为主题，旨在深化各方对实体经济未来趋势的理解，形成推进产业互联、建设智能商业的向心力。 </p>
+                    <p>2018年8月11日，优鸟“2018产业互联顶层战略私密会”于昆明世博花园酒店会议中心举行，来自全国各地的80多位核心实体企业家应邀参加。会议以“产业互联”为主题，旨在深化各方对实体经济未来趋势的理解，形成推进产业互联、建设智能商业的向心力。
+                    </p>
                     <a href="" class="more">查看详情 ></a>
                 </div>
             </div>
@@ -161,8 +164,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -170,7 +173,8 @@
                 <p>10000@uniaip.com</p>
                 <h4>服务热线：</h4>
                 <p>0871-65886828</p>
-                <a href="javascript:window.open('http://b.qq.com/webc.htm?new=0&sid=21345555&o=aaa&q=7', '_blank', 'height=502, width=644,toolbar=no,scrollbars=no,menubar=no,status=no');"><img src="./img/common/qq.png"></a>
+                <a href="javascript:window.open('http://b.qq.com/webc.htm?new=0&sid=21345555&o=aaa&q=7', '_blank', 'height=502, width=644,toolbar=no,scrollbars=no,menubar=no,status=no');"><img
+                        src="./img/common/qq.png"></a>
             </div>
             <div class="logo">
                 <a href=""><img src="./img/logo/logo-blue.png"></a>
@@ -196,7 +200,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -204,4 +208,5 @@
     <script src="js/language.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
