--- a/uniao-cloud.html
+++ b/uniao-cloud.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <title>优鸟智慧商务系统</title>
 </head>
+
 <body>
     <div id="nav-m">
         <div class="shade"></div>
@@ -144,8 +146,8 @@
                 <h4>联系我们</h4>
                 <ul>
                     <li><a href="#">服务网点</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">业务合作</a></li>
+                    <li><a href="#">客户服务</a></li>
                 </ul>
             </div>
             <div class="poster">
@@ -179,7 +181,7 @@
                     <li><a href="">投诉建议</a></li>
                     <li><a href="">滇ICP备17001632号</a></li>
                 </ul>
-                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技     版权所有</p>
+                <p>Copyright © 2016-2018 Uniaoo. All Rights Reserved 优鸟科技 版权所有</p>
             </div>
         </div>
     </div>
@@ -187,4 +189,5 @@
     <script src="js/language.js"></script>
     <script src="js/common.js"></script>
 </body>
+
 </html>
