--- a/news-detail.html
+++ b/news-detail.html
@@ -52,7 +52,7 @@
         </ul>
         <div class="content-right">
             <div class="editor-content">
-                <h4>优鸟快讯 > 资讯详情</h4>
+                <h4>优鸟快讯 > 资讯详情 > 详情</h4>
                 <p class="new"><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</p>
                 <div class="sourse">
                     <span>文章来源：原创 2016-12-12 优鸟 优鸟创孵</span>
