--- a/news.html
+++ b/news.html
@@ -67,29 +67,23 @@
             </div>
             <div class="editor-content">
                 <ul>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
+                    <li class="clearfix">
+                        <a href=""><h6>优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/19</span></a>
                     </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
+                    <li class="clearfix">
+                        <a href=""><h6>优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/19</span></a>
                     </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
+                    <li class="clearfix">
+                        <a href=""><h6>优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/19</span></a>
                     </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
+                    <li class="clearfix">
+                        <a href=""><h6>优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/19</span></a>
                     </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
+                    <li class="clearfix">
+                        <a href=""><h6>优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/19</span></a>
                     </li>
-                    <li>
-                        <a href="">优鸟科技“2018产业互联顶层战略私密会”圆满成功</a>
-                        <span>2018/05/19</span>
+                    <li class="clearfix">
+                        <a href=""><h6>优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/19</span></a>
                     </li>
                 </ul>
             </div>
@@ -97,14 +91,14 @@
                 <a name="hyxw" class="anchor"></a>
                 <h4>行业新闻<a href="" class="more">更多 &gt;</a></h4>
                 <ul>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
+                    <li class="clearfix">
+                        <a href=""><span>NEW!</span><h6>优鸟--劳逸结合的工作新模式优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/05</span></a>
                     </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
+                    <li class="clearfix">
+                        <a href=""><span>NEW!</span><h6>优鸟--劳逸结合的工作新模式</h6><span>2018/05/05</span></a>
                     </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
+                    <li class="clearfix">
+                        <a href=""><span>NEW!</span><h6>优鸟--劳逸结合的工作新模式</h6><span>2018/05/05</span></a>
                     </li>
                 </ul>
             </div>
@@ -112,14 +106,14 @@
                 <a name="qygg" class="anchor"></a>
                 <h4>企业公告<a href="" class="more">更多 &gt;</a></h4>
                 <ul>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
+                    <li class="clearfix">
+                        <a href=""><span>NEW!</span><h6>优鸟--劳逸结合的工作新模式优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功优鸟科技“2018产业互联顶层战略私密会”圆满成功</h6><span>2018/05/05</span></a>
                     </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
+                    <li class="clearfix">
+                        <a href=""><span>NEW!</span><h6>优鸟--劳逸结合的工作新模式</h6><span>2018/05/05</span></a>
                     </li>
-                    <li>
-                        <a href=""><span>NEW!</span>优鸟--劳逸结合的工作新模式<span>2018/05/05</span></a>
+                    <li class="clearfix">
+                        <a href=""><span>NEW!</span><h6>优鸟--劳逸结合的工作新模式</h6><span>2018/05/05</span></a>
                     </li>
                 </ul>
             </div>
