--- a/news-category.html
+++ b/news-category.html
@@ -81,7 +81,7 @@
                         <dl class="clearfix">
                             <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
                             <dd>
-                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
+                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
                                 <p>
                                     <span>文章来源：原创</span>
                                     <span>2016-12-19</span>
@@ -111,7 +111,7 @@
                         <dl class="clearfix">
                             <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
                             <dd>
-                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
+                                <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
                                 <p>
                                     <span>文章来源：原创</span>
                                     <span>2016-12-19</span>
