--- a/about.html
+++ b/about.html
@@ -57,10 +57,11 @@
                 <a name="gsjj" class="anchor"></a>
                 <div class="editor-content" name="gsjj">
                     <h4>公司简介</h4>
-
-                    <p class="left">优鸟科技旨在助力企业实现云上应用、数字化升级重组，并通过优鸟创孵、桦龙科技、塔莉亚品牌策划、黑狐数字传媒、智媒网络、大鼎科技、优鸟产业互联研究中心、优鸟商业卫星产业应用研究中心等赋能；从商业的顶层架构、新IT技术支撑，到策略、设计，再到落地执行，改变营销、销售和经营的方式,
-                        为商家、品牌及其他实体企业提供一站式实体+商务电子化、云应用等解决方案和服务，让其可借助智能商业的力量，为企业打通上中下游链路，让企业通过产业互联化、数据智能化、网络协同化，构建全渠道体系，实现线上线下结合，提高各商事主体的运营效益，提升商家品牌价值。</p>
-                    <span class="right"><img src="./img/page/about/about-1.jpg" style="margin-left: 20px"></span>
+                    <div class="gsjj-top clearfix">
+                        <p class="left">优鸟科技旨在助力企业实现云上应用、数字化升级重组，并通过优鸟创孵、桦龙科技、塔莉亚品牌策划、黑狐数字传媒、智媒网络、大鼎科技、优鸟产业互联研究中心、优鸟商业卫星产业应用研究中心等赋能；从商业的顶层架构、新IT技术支撑，到策略、设计，再到落地执行，改变营销、销售和经营的方式,
+                            为商家、品牌及其他实体企业提供一站式实体+商务电子化、云应用等解决方案和服务，让其可借助智能商业的力量，为企业打通上中下游链路，让企业通过产业互联化、数据智能化、网络协同化，构建全渠道体系，实现线上线下结合，提高各商事主体的运营效益，提升商家品牌价值。</p>
+                        <span class="right"><img src="./img/page/about/about-1.jpg"></span>
+                    </div>
                 </div>
                 <a name="ynwh" class="anchor"></a>
                 <div class="editor-content" name="ynwh">
