--- a/contact-us.html
+++ b/contact-us.html
@@ -85,11 +85,11 @@
                                 <label for=""><i></i>行业必填</label>
                             </li>
                             <li>
-                                <input type="text" placeholder="所属省份" required name="data[suoshushengshi]">
-                                <label for=""><i></i>省份必填</label>
+                                <input type="text" placeholder="所属省市" required name="data[suoshushengshi]">
+                                <label for=""><i></i>省市必填</label>
                             </li>
                             <li class="request">
-                                <input type="text" required name="data[nidexuqiu]">
+                                <input type="text" placeholder="您的需求" required name="data[nidexuqiu]">
                                 <label for=""><i></i>请提出您的需求</label>
                             </li>
                         </ul>
