--- a/news-category.html
+++ b/news-category.html
@@ -79,7 +79,7 @@
                 <li>
                     <a href="">
                         <dl class="clearfix">
-                            <dt><img src="./img/page/news/news-457x257.1.jpg"></dt>
+                            <dt><img src="https://bpic.588ku.com/back_pic/05/70/83/405ba3c49c1e04c.jpg"></dt>
                             <dd>
                                 <h3><span>NEW!</span>“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功“云”得未来，优鸟产业互联“顶层战略私密会”圆满成功</h3>
                                 <p>
